<resources>
    <string name="app_name">Ordering</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_man_chinh">ManChinhActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    // navigation View

    <string name="trangchu">Trang chủ</string>
    <string name="thucdon">Thực đơn</string>
    <string name="nhanvien">Nhân viên</string>
    <string name="thongke">Thống Kê</string>
    <string name="caidat">Cài đặt</string>
    <string name="dangxuat">Đăng xuất</string>

    //tai khoan
    <string name="dangki">Đăng kí</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="admin">Quản Lý</string>
    <string name="tiengviet">Tiếng Việt</string>
    <string name="tentaikhoan">Tài khoản</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="taotaikhoan">Tạo tài khoản mới</string>
    <string name="quyenmatkhau">Quên mật khẩu</string>
    <string name="bandacotaikhoan">Bạn đã có tài khoản?</string>
    <string name="sodienthoai">Số điện thoại</string>
    <string name="tienganh">Tiếng Anh</string>
    <string name="loidangki">Mời bạn nhập đầy đủ</string>
    <string name="themnhanvientanhcong">Thêm thành công</string>
    <string name="tentaikhoandatontai">Tên tài khoản đã tồn tại</string>
    <string name="thongbaothanhcong">Đăng nhập thành công</string>
    <string name="loithatbai">Đăng nhập thất bại</string>
    <string name="loikitu">Tài Khoản phải 6 kí tự</string>

    <!--Them ban an-->
    <string name="thembanan">Thêm bàn ăn</string>
    <string name="tenbanan">Tên bàn ăn</string>
    <string name="dongy">Đồng ý</string>
    <string name="loinull">Không được để trống</string>
    <string name="themthanhcong">Thêm thành công</string>
    <string name="themthatbai">Thêm thất bại</string>
    <string name="thoat">Thoát</string>
    <string name="Themthucdon">Thêm thực đơn</string>
    <string name="themmonan">Thêm Thực đơn</string>
    <string name="thucdon1">Thực đơn</string>
    <string name="tenloai">Tên loại</string>
    <string name="themloaithucdon">Thêm loại thực đơn</string>
    <string name="mohinhanh">Chọn Hình ảnh</string>


</resources>
