<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trangchu"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/trangchu" />
        <item
            android:id="@+id/nav_thucdon"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/thucdon" />
        <item
            android:id="@+id/nav_nhanvien"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nhanvien" />
        <item
            android:id="@+id/nav_thongke"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/thongke" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_caidat"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/caidat" />
            <item
                android:id="@+id/nav_dangxuat"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/dangxuat" />
        </menu>
    </item>

</menu>
